--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source=DESKTOP-55C9KJB;initial catalog=E-Commerce;trusted_connection=true"
   },
+  "JWT": {
+    "Issuer": "http://localhost:3333",
+    "Audience": "http://localhost:3333",
+    "Key": "gQLCZOoWTiJ5mMv18PW3JyYdyYRKYP2i"
+  },
   "AllowedHosts": "*",
   "ApplicationUrls": "http://0.0.0.0:5001;http://0.0.0.0:5000"
 }
