feat:add auth throught httponly cookie w/jwt token chore: add swagger

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,8 @@
     "DefaultConnection": "data source=DESKTOP-55C9KJB;initial catalog=E-Commerce;trusted_connection=true"
   },
   "JWT": {
-    "Issuer": "http://localhost:3333",
-    "Audience": "http://localhost:3333",
+    "Issuer": "e-commerce",
+    "Audience": "localhost",
     "Key": "gQLCZOoWTiJ5mMv18PW3JyYdyYRKYP2i"
   },
   "AllowedHosts": "*",
