--- a/ClientApp/.eslintrc
+++ b/ClientApp/.eslintrc
@@ -11,7 +11,7 @@
     },
     "import/resolver": {
       "node": {
-        "paths": ["src"]
+        "paths": ["ClientApp/src"]
       }
     }
   },
@@ -48,7 +48,7 @@
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "tailwindcss/classnames-order": "warn",
-    "tailwindcss/no-custom-classname": "warn",
+    "tailwindcss/no-custom-classname": "off",
     "tailwindcss/no-contradicting-classname": "error",
     "import/order": [
       "error",
