--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -18,12 +18,13 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-text-mask": "^5.4.11",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-input-mask": "^3.0.0-alpha.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-text-mask": "^5.5.0",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "yup": "^0.32.11"
