--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,5 @@
     "Key": "gQLCZOoWTiJ5mMv18PW3JyYdyYRKYP2i"
   },
   "AllowedHosts": "*",
-  "ApplicationUrls": "http://0.0.0.0:5001;http://0.0.0.0:5000"
+  "ApplicationUrl": "http://0.0.0.0:3333"
 }
