--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "react-text-mask": "^5.5.0",
