chore: refactor code breaking: changed db connection mechanism chore: add xml for swagger

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "data source=DESKTOP-55C9KJB;initial catalog=E-Commerce;trusted_connection=true"
+    "DefaultConnection": "DSN=ODBC5;Database=B5;"
   },
   "JWT": {
     "Issuer": "e-commerce",
